js/bjsl/BasicTableCellPositioner: fix frame jumping when transferin "top" prop value to "translateY" on animation end

--- a/css/cell-scroller-view.css
+++ b/css/cell-scroller-view.css
@@ -40,5 +40,6 @@
     top: 0;
     left: 0;
     visibility: hidden;
+    transform: translateY(0px);
     /* transition: 60ms ease-out opacity, 200ms cubic-bezier(0.2, 1.4, 0.7, 1.2) transform; */
 }
